include support for netlfy deployment

--- a/_app/_includes/top.html
+++ b/_app/_includes/top.html
@@ -1,5 +1,5 @@
 <!doctype html>
-
+<head>
 {% if site.force_utf_8 %}
   <meta charset=utf-8>
 {% endif %}
@@ -7,7 +7,7 @@
 <!-- Beautify Android -->
 <meta name="theme-color" content="#b6e8f5">
 <!-- For IE 9 and below. ICO should be 32x32 pixels in size -->
-<!--[if IE]><link rel="shortcut icon" href="favicon.ico"><![endif]-->
+<link rel="shortcut icon" href="favicon.ico">
 
 <!-- Touch Icons - iOS and Android 2.1+ 180x180 pixels in size. --> 
 <link rel="apple-touch-icon-precomposed" href="apple-touch-icon.png">
@@ -41,3 +41,4 @@
 {% if page.head %}
   {{ page.head }}
 {% endif %}
+</head>
