adds documentation for custom hooks update

--- a/_app/_includes/themes/curtana/includes/footer.html
+++ b/_app/_includes/themes/curtana/includes/footer.html
@@ -33,8 +33,41 @@
   <script src="{{ '/js/lightense.min.js?assets-inline' | prepend: amsf_theme_assets }}"></script>
   <script>
     window.addEventListener('load', function () {
-      Lightense('p > img:not(.no-lightense),.lightense');
-    }, false);
+      Lightense('p > img:not(.no-lightense),.lightense', function () {
+        Lightense('img', {
+          beforeShow(config) {
+            var beforeShowAttr = config.target.getAttribute(
+              "before-show-message"
+            );
+            if (beforeShowAttr) {
+              console.log(beforeShowAttr);
+            }
+          },
+          afterShow(config) {
+            var afterShowAttr = config.target.getAttribute("after-show-message");
+            if (afterShowAttr) {
+              console.log(afterShowAttr);
+            }
+          },
+          beforeHide(config) {
+            var beforeHideMessage = config.target.getAttribute(
+              "before-hide-message"
+            );
+            if (beforeHideMessage) {
+              console.log(beforeHideMessage);
+            }
+          },
+          afterHide(config) {
+            var afterHideMessage = config.target.getAttribute(
+              "after-hide-message"
+            );
+            if (afterHideMessage) {
+              console.log(afterHideMessage);
+            }
+          }
+        });
+      }, false);
+    });
   </script>
 {% endif %}
 
