feat(css): simplify font stack

--- a/_app/assets/_scss/_user.scss
+++ b/_app/assets/_scss/_user.scss
@@ -21,6 +21,6 @@
 
 // EXAMPLE: Custom typography for Chinese Traditional
 :root {
-  --fontstack-sans-serif: "Helvetica Neue", "Hiragino Sans GB", Arial, sans-serif;
+  --fontstack-sans-serif: "Helvetica Neue", "Hiragino Sans GB", sans-serif;
   --fontstack-serif: Georgia, "Hiragino Mincho ProN", serif;
 }
