--- a/_app/assets/_scss/_user.scss
+++ b/_app/assets/_scss/_user.scss
@@ -29,12 +29,12 @@
   --link-color-h: 285;
   --link-color-s: 84%;
   --link-color-l: 45%;
-
   --text-color-h: var(--link-color-h);
   --bg-color-h: var(--link-color-h);
 
   @media (prefers-color-scheme: dark) {
-    // Code should be lighter in dark mode
-    // --code-color-l: calc(var(--link-color-l) * 1.3);
+    --text-color-l: 95%;
+    --link-color-l: 70%;
+    --bg-color-l: 5%;
   }
 }
