--- a/_app/assets/themes/curtana/_scss/_variables.scss
+++ b/_app/assets/themes/curtana/_scss/_variables.scss
@@ -13,7 +13,7 @@ $breakpoint-xs: 400px !default;
 :root {
   // Typography
   --fontstack-prefix: -apple-system, BlinkMacSystemFont,;
-  --fontstack-sans-serif: "Helvetica Neue", sans-serif;
+  --fontstack-sans-serif: "Helvetica Neue", "Segoe UI", sans-serif;
   --fontstack-serif: Georgia, serif;
   --fontstack-monospace: Menlo, Consolas, monospace;
   --fontstack-default: var(--fontstack-prefix) var(--fontstack-sans-serif);
