feat(posts): add new post “Media Auto Hash Rename”

--- a/_app/assets/_scss/_user.scss
+++ b/_app/assets/_scss/_user.scss
@@ -21,7 +21,7 @@
 
 // EXAMPLE: Custom typography for Chinese Traditional
 :root {
-  --fontstack-sans-serif: "Helvetica Neue", "Hiragino Sans GB", sans-serif;
+  --fontstack-sans-serif: "Helvetica Neue", "Segoe UI", "Hiragino Sans GB", sans-serif;
   --fontstack-serif: Georgia, "Hiragino Mincho ProN", serif;
 }
 
